--- a/people.html
+++ b/people.html
@@ -80,7 +80,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Yu2021August.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS001: Yu Xu</h3>
 										</header>
