--- a/people.html
+++ b/people.html
@@ -66,7 +66,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Gongyu2021August.jpg" alt="" /></a>
 										<header>
 											<h3>PI: <a href="index.html#PI">Dr. Gongyu Li</a></h3>
 										</header>
