--- a/publication.html
+++ b/publication.html
@@ -117,7 +117,8 @@
 									<a href="https://www.nature.com/articles/s41467-019-12346-8">Molecular Basis 
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
 									</a><strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
-									[<i><strong><font color='red'>High-resolution SMS</font></strong></i>.]</p>
+									[<i><strong><font color='red'>High-resolution SMS</font></strong></i>.]
+									<span class="image featured"><img src="images/iCAP.jpg" alt="" /></span></p>
 									
 									<p><strong>19</strong>. Qinjingwen Cao, Yijia Wang, Bingming Chen, Fengfei Ma, Ling Hao, <strong>Gongyu Li</strong>, 
 									Chuanzi Ouyang, and Lingjun Li*. 
