--- a/publication.html
+++ b/publication.html
@@ -118,7 +118,8 @@
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
 									</a><strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
 									[<i><strong><font color='red'>High-resolution SMS</font></strong></i>.]
-									<span class="image featured"><img src="images/iCAP.jpg" alt="" /></span></p>
+									<span class="image featured"><img src="images/iCAP.jpg" alt="" /></span>
+									<a class='image centered'> <img src="images/limslab_projects_full.jpg" alt="" style="width:60%;"/></a></p>
 									
 									<p><strong>19</strong>. Qinjingwen Cao, Yijia Wang, Bingming Chen, Fengfei Ma, Ling Hao, <strong>Gongyu Li</strong>, 
 									Chuanzi Ouyang, and Lingjun Li*. 
