--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 													<!-- Excerpt -->
 														<article class="box excerpt">
-															<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
+															<a class="image featured"><img src="images/Gongyu2021August.jpg" alt="" /></a>
 															<header>
 																<span class="date">Professional Preparations</span>																
 															</header>
