--- a/publication.html
+++ b/publication.html
@@ -110,16 +110,15 @@
 									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract"><i><strong><font color='green'>F1000Prime Recommendation</font></strong></i></a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
 									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff"><i><strong><font color='green'>Nature Communications Editors’ HIGHLIGHTS</font></strong></i></a>.]<br>
 									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry"><i><strong><font color='green'>Mass Spectrometry Fuels Nanosecond Photochemistry</font></strong></i></a>]<br>
-									[<i><strong><font color='red'>Rapid SMS: nsPCR</font></strong></i>.]
-									<span class="image featured"><img src="images/nsPCRFigure1.jpg" alt="" /></span></p>
+									[<i><strong><font color='red'>Rapid SMS: nsPCR</font></strong></i>.]									
+									<a class='image centered'> <img src="images/nsPCRFigure1.jpg" alt="" style="width:40%;"/></a></p>
 									
 									<p><strong>20</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
 									<a href="https://www.nature.com/articles/s41467-019-12346-8">Molecular Basis 
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
 									</a><strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
 									[<i><strong><font color='red'>High-resolution SMS</font></strong></i>.]
-									<span class="image featured"><img src="images/iCAP.jpg" alt="" /></span>
-									<a class='image centered'> <img src="images/limslab_projects_full.jpg" alt="" style="width:60%;"/></a></p>
+									<a class='image centered'> <img src="images/iCAP.jpg" alt="" style="width:40%;"/></a></p>
 									
 									<p><strong>19</strong>. Qinjingwen Cao, Yijia Wang, Bingming Chen, Fengfei Ma, Ling Hao, <strong>Gongyu Li</strong>, 
 									Chuanzi Ouyang, and Lingjun Li*. 
