--- a/people.html
+++ b/people.html
@@ -80,13 +80,13 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/Yu2021August.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Xia2021July.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS001: Yu Xu</h3>
+											<h3>LIMS001: Xia Xu</h3>
 										</header>
 										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br> 
-										<strong>MS</strong>: 2017.09 - 2020.07, SUN YAT-SEN UNIVERSITY<br>
-										<strong>BS</strong>: 2013.09 - 2017.07, Yulin Normal University </p>
+										<strong>MS</strong>: 2018.09 - 2021.07, Beijing Univ. C. Med.<br>
+										<strong>BS</strong>: 201409 - 201806, Shandong Univ. Tra. C. Med. </p>
 									</section>
 
 							</div>
@@ -96,11 +96,10 @@
 									<section>
 										<a class="image featured"><img src="images/Xia2021July.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS002: Xia Xu</h3>
+											<h3>LIMS002: Rui Zhao</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br>
-										<strong>MS</strong>: 2018.09 - 2021.07, Beijing Univ. C. Med.<br>
-										<strong>BS</strong>: 201409 - 201806, Shandong Univ. Tra. C. Med.</p>
+										<p><strong>MS Student</strong>: 2021.09 - now, Nankai University<br>
+										<strong>BS</strong>: 2017.09 - 2021.06, Yantai University</p>
 									</section>
 
 							</div>
