--- a/people.html
+++ b/people.html
@@ -94,7 +94,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/Xia2021July.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Rui2021July.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS002: Rui Zhao</h3>
 										</header>
