--- a/people.html
+++ b/people.html
@@ -107,12 +107,12 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/Rui2021July.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Ning2021Sep.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS003: Rui Zhao</h3>
+											<h3>LIMS003: Ning Wang</h3>
 										</header>
 										<p><strong>MS Student</strong>: 2021.09 - now, Nankai University<br> 
-										<strong>BS</strong>: 2017.09 - 2021.06, Yantai University</p>
+										<strong>BS</strong>: 2017.09 - 2021.06, Yanbian University</p>
 									</section>
 									
 							</div>
