--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,7 @@
 									<header>
 										<h2> <strong>LimsLab @ Fall 2021</strong> </h2> 
 									</header>
-									<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
+									<span class="image featured"><img src="images/LimsLab_Sep2021_cp.jpg" alt="" /></span>
 									<header>
 										<h2> <strong>LimsLab @ Summer 2021</strong> </h2> 
 									</header>
