--- a/people.html
+++ b/people.html
@@ -107,7 +107,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/Ning2021Sep.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Ning2021Sep_99.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS003: Ning Wang</h3>
 										</header>
