--- a/news.html
+++ b/news.html
@@ -71,6 +71,22 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
+																<span class="date">September 28, 2021</span>
+																<h3><a href="news.html">Gongyu Gave 1st KEYNOTE Talk @ BCEIA 2021!</a></h3>
+															</header>
+															<p>Gongyu gave an invited <strong>KEYNOTE</strong> talk at Session G: Analytical Techniques in Life Science of (19th) BCEIA 2021, chaired by Prof. Lei Guo. 
+															The title for Prof. Li's talk was: "<strong>Nanosecond photochemically promoted click chemistry</strong>: a fast protein structural probing tool for structural mass spectrometry". 
+															PS, this was also a great opportunity to have a group reunion with Prof. Guangming Huang's lab from USTC. .</p>
+															<span class="image featured"><img src="images/Gongyu_BCEIA2021_02.jpg" alt="" /></span>
+														</article>
+
+												</li>
+												
+												<li>
+
+													<!-- Excerpt -->
+														<article class="box excerpt">
+															<header>
 																<span class="date">August 18, 2021</span>
 																<h3><a href="news.html">LimsLab FIRST NSFC Proposal Gets Promoted!</a></h3>
 															</header>
