--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
 											<ul class="icons">
 												<li class="icon solid fa-home">
 													Research Center for Analytical Science, Nankai University<br />
-													94 Weijin Road, Tianjin 30071<br />
+													94 Weijin Road, Tianjin 300071<br />
 												</li>
 												<li class="icon solid fa-phone">
 													(000) 000-0000
 												</li>
 												<li class="icon solid fa-envelope">
-													<a href="mailto:gongyu.lims@gmail.com?subject=limslab-contact">gongyu.lims@gmail.com</a>
+													<a href="mailto:gongyu.lims@gmail.com?subject=limslab-contact">ligongyu@nankai.edu.cn</a>
 												</li>
 											</ul>
 										</div>
