--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 															</header>
 															<p><strong>李功玉</strong>，男，南开大学化学学院，特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
 															获理学博士学位。2017年08月至2021年1月在美国威斯康星大学麦迪逊分校进行博士后研究。李博士曾分别于2016年和2019年两次前往美国密歇根大学进行交流学习。
-															2021年2月，加入南开大学化学学院，分析科学研究中心。相关课题及成果已成功申报2项国家基金委面上项目（主持+参与），1项中科大青年创新基金（主持）和1项美国质谱协会博士后研究基金
+															2021年2月，加入南开大学化学学院，分析科学研究中心。相关课题及成果已成功申报2项国家自然科学基金项目（主持+参与），1项中科大青年创新基金（主持）和1项美国质谱协会博士后研究基金
 															（主持），并获批1项中国授权专利。鉴于在超快结构质谱分析领域的创新性研究成果，李博士于2019年被美国质谱学会
 															（American Society for Mass Spectrometry）授予该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，李博士
 															为该年度五位获奖人中的唯一中国籍获奖者）。其研究成果逐渐获得国际同行的认可，多次受邀在国际顶级会议上做口头报告，
