--- a/publication.html
+++ b/publication.html
@@ -71,7 +71,7 @@
 									<p><strong>28</strong>. <strong>Gongyu Li*</strong>, Ashley Phetsanthad, Min Ma, Qinying Yu, Ashita Nair, Zhen Zheng, Kellen DeLaney, Fengfei Ma, 
 									Seungpyo Hong and Lingjun Li*.	<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.1c04503"> Native ion mobility-mass spectrometry-enabled fast structural
 									interrogation of labile protein surface modifications at the intact protein level.
-									</a> <strong><i>Anal. Chem.</i></strong> 2022, doi: 10.1021/acs.analchem.1c04503. (<strong>*, co-corresponding</strong>)</br> 
+									</a> <strong><i>Anal. Chem.</i></strong> 2022, 94, 4, 2142-2153. (<strong>*, co-corresponding</strong>)</br> 
 									[<i><strong><font color='red'>High-throughput SMS: AIU/AIF IM-MS</font></strong></i>.]</p> 
 									
 									<p><strong>27</strong>. <strong>Gongyu Li</strong>, Yuan Liu and Lingjun Li*.	<a href="https://link.springer.com/protocol/10.1007%2F978-1-0716-2030-4_10">
