--- a/publication.html
+++ b/publication.html
@@ -68,6 +68,10 @@
 									<h3><strong><U><font color='blue'>At Nankai University</font></U>:</strong></h3>
 									<h3><strong>2022</strong></h3>
 									
+									<p><strong>29</strong>. Yuan Liu, <strong>Gongyu Li*</strong>, Tingjia Gu and Lingjun Li*.	<a href="https://www.x-mol.com/groups/gongyu_li/news/24116"> Nanosecond Photochemical Reaction (nsPCR) for Enhanced Identification, 
+									Quantification and Visualization of Primary Amine-containing Metabolites by MALDI-Mass Spectrometry.
+									</a> <strong><i>Anal. Chem.</i></strong> 2022, accepted. (<strong>*, co-corresponding</strong>)</br> 
+									
 									<p><strong>28</strong>. <strong>Gongyu Li*</strong>, Ashley Phetsanthad, Min Ma, Qinying Yu, Ashita Nair, Zhen Zheng, Kellen DeLaney, Fengfei Ma, 
 									Seungpyo Hong and Lingjun Li*.	<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.1c04503"> Native ion mobility-mass spectrometry-enabled fast structural
 									interrogation of labile protein surface modifications at the intact protein level.
