--- a/index.html
+++ b/index.html
@@ -170,16 +170,15 @@
 															<header>
 																<span class="date">LimsLab简介</span>
 															</header>
-															<p>为解决传统蛋白质质谱技术在蛋白质相互作用信息、细胞异质性信息以及细胞动态变化信息等
-															多方面的不足，LimsLab提出<strong><a href="research.html#SMS"><font color='blue'>新型结构质谱</font></a></strong>的概念，将整合原位蛋白质质谱、离子迁移结构质谱和靶向蛋白质
-															组学的优势，开发出一整套针对蛋白结构及蛋白修饰构效关系的超快质谱分析方法，长期目标为实现<strong><font color='blue'>单个活细胞蛋白质结构</font></strong>的快速质谱分析。LimsLab课题组在蛋白质
-															质谱方向上有近十年的研究经验，包括质谱基础理论研究、新型快速原位灵敏的质谱分析方法开发以及在
-															阿尔茨海默症相关蛋白结构研究中的应用研究。LimsLab将以为人类疾病的发病机制和早期诊疗提供蛋白质
-															分子机制水平上的新视角新策略为核心任务，技术上重点解决蛋白质结构质谱分析时存在的技术难题，
-															科学上重点关注低丰度蛋白质翻译后修饰如氨基酸手性突变和唾液酸化等对蛋白结构和功能的影响。
-															具体方向包括：（1）<font color='light blue'>超快结构质谱</font>一步检测活细胞内蛋白结构及其相互作用（原位蛋白鉴定）；（2）<font color='light blue'>无损结构质谱</font>方法学开发及其
-															用于蛋白修饰构效关系研究（结构无损分析）；（3）新型<font color='light blue'>高分辨结构质谱</font>用于
-															人类疾病关键蛋白的手性拆分（功能应用研究）。</p>
+															<p>南开大学李功玉课题组LimsLab@NKU的研究方向为蛋白结构离子淌度质谱分析。为解决传统蛋白质质谱技术在蛋白质相互作用信息、细胞异质性信息以及细胞动态变化信息等
+															多方面的不足，LimsLab提出<strong><a href="research.html#SMS"><font color='blue'>原位结构质谱</font></a></strong>的概念，将整合原位蛋白质质谱、离子淌度结构质谱和靶向蛋白质
+															组学的优势，开发出一整套针对蛋白结构及蛋白修饰构效关系的超快质谱分析方法，长期目标为实现<strong><font color='blue'>单个活细胞内单个蛋白质结构</font></strong>的快速质谱分析。LimsLab课题组在蛋白质
+															质谱方向上有十余年的研究经验，包括质谱基础理论研究、新型快速原位灵敏的质谱分析方法开发以及在
+															阿尔茨海默症相关蛋白结构研究中的应用研究。LimsLab核心任务是为病原微生物感染机制和早期诊疗提供蛋白质
+															分子机制水平上的新视角新策略，技术上重点解决蛋白质结构质谱分析时存在的技术难题（比如常规结构质谱技术的环境兼容性问题），
+															科学上重点关注低丰度蛋白质翻译后修饰（如氨基酸手性突变和唾液酸化等）对蛋白结构和功能的影响。
+															具体方向包括：（1）<font color='light blue'>原位结构质谱</font>一步检测活细胞内蛋白结构及其相互作用（原位蛋白鉴定）；（2）<font color='light blue'>化学结构质谱</font>方法学开发及其
+															用于蛋白修饰构效关系研究（结构无损分析）；（3）<font color='light blue'>手性结构质谱</font>用于人类疾病关键蛋白的手性拆分（功能应用研究）。</p>
 														</article>
 														<article class="box excerpt">
 															<header>
@@ -187,9 +186,8 @@
 															</header>
 															<p><strong>李功玉</strong>，男，南开大学化学学院，特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
 															获理学博士学位。2017年08月至2021年1月在美国威斯康星大学麦迪逊分校进行博士后研究。李博士曾分别于2016年和2019年两次前往美国密歇根大学进行交流学习。
-															2021年2月，加入南开大学化学学院，分析科学研究中心。相关课题及成果已成功申报2项国家自然科学基金项目（主持+参与），1项中科大青年创新基金（主持）和1项美国质谱协会博士后研究基金
-															（主持），并获批1项中国授权专利。鉴于在超快结构质谱分析领域的创新性研究成果，李博士于2019年被美国质谱学会
-															（American Society for Mass Spectrometry）授予该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，李博士
+															2021年2月，加入南开大学化学学院，分析科学研究中心。主持2项国家自然科学基金委项目，1项中科大青年创新基金和1项美国质谱协会博士后研究基金
+															，并获批1项中国授权专利（排名第三）。获2019年美国质谱学会（American Society for Mass Spectrometry）年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，李博士
 															为该年度五位获奖人中的唯一中国籍获奖者）。其研究成果逐渐获得国际同行的认可，多次受邀在国际顶级会议上做口头报告，
 															并担任包括Science Advances和Chemical Science等在内的多家top同行评议SCI期刊的独立审稿人和仲裁审稿人。</p>
 														</article>
