--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
 															<header>
 																<span class="date">LimsLab简介</span>
 															</header>
-															<p>南开大学李功玉课题组LimsLab@NKU的研究方向为蛋白结构离子淌度质谱分析。为解决传统蛋白质质谱技术在蛋白质相互作用信息、细胞异质性信息以及细胞动态变化信息等
+															<p>南开大学李功玉课题组LimsLab@NKU的研究方向为蛋白结构离子淌度质谱分析。针对结构质谱分析存在的原位取样困难、脱溶剂破坏蛋白结构以及结构分辨率不足等技术问题，
+															李功玉课题组整合了针对细胞内完整蛋白的在线感应电穿孔原位释放技术与毫秒微电泳快速分离技术，开发了基于纳秒光化学点击反应的快速捕获蛋白高级结构策略，
+															并发展了“仪器非依赖型手性拆分”高分辨离子淌度质谱分析方法，由此搭建了蛋白质快速检测和无损高分辨结构质谱分析平台，依次在细胞、组织和人类疾病模型水平上开展了系统性研究，
+															最终在Dalton质量分辨率水平上，快速揭示了“氨基酸手性调控阿尔茨海默症相关蛋白结构和毒性”以及“唾液酸化修饰调控转铁蛋白高级结构”的分子基础。
+															为解决传统蛋白质质谱技术在蛋白质相互作用信息、细胞异质性信息以及细胞动态变化信息等
 															多方面的不足，LimsLab提出<strong><a href="research.html#SMS"><font color='blue'>原位结构质谱</font></a></strong>的概念，将整合原位蛋白质质谱、离子淌度结构质谱和靶向蛋白质
 															组学的优势，开发出一整套针对蛋白结构及蛋白修饰构效关系的超快质谱分析方法，长期目标为实现<strong><font color='blue'>单个活细胞内单个蛋白质结构</font></strong>的快速质谱分析。LimsLab课题组在蛋白质
 															质谱方向上有十余年的研究经验，包括质谱基础理论研究、新型快速原位灵敏的质谱分析方法开发以及在
@@ -184,12 +188,10 @@
 															<header>
 																<span class="date">导师简介</span>
 															</header>
-															<p><strong>李功玉</strong>，男，南开大学化学学院，特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
-															获理学博士学位。2017年08月至2021年1月在美国威斯康星大学麦迪逊分校进行博士后研究。李博士曾分别于2016年和2019年两次前往美国密歇根大学进行交流学习。
-															2021年2月，加入南开大学化学学院，分析科学研究中心。主持2项国家自然科学基金委项目，1项中科大青年创新基金和1项美国质谱协会博士后研究基金
-															，并获批1项中国授权专利（排名第三）。获2019年美国质谱学会（American Society for Mass Spectrometry）年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，李博士
-															为该年度五位获奖人中的唯一中国籍获奖者）。其研究成果逐渐获得国际同行的认可，多次受邀在国际顶级会议上做口头报告，
-															并担任包括Science Advances和Chemical Science等在内的多家top同行评议SCI期刊的独立审稿人和仲裁审稿人。</p>
+															<p><strong>李功玉</strong>，男，南开大学化学学院，特聘研究员，博士生导师。入选南开大学“百青人才”计划和国家高层次青年人才计划。2017年毕业于中国科学技术大学，获理学博士学位。
+															2017年至2021年在美国威斯康星大学麦迪逊分校开展博士后研究。2016年和2019年两次前往美国密西根大学安娜堡分校交流访问。2021年2月加入南开大学化学学院，成立LimsLab课题组，研究方向为蛋白结构质谱分析。
+															相关成果逐渐产生国际影响力：以第一作者（含共一）或通讯作者发表SCI论文17篇（含2篇Nat. Commun.和 6篇Anal. Chem.）；主持中美四项基金；获2019美国质谱协会博士后职业发展奖；
+															多次在国际会议上做邀请口头报告；担任有国际影响力期刊仲裁审稿人；担任天津市色谱研究会第九届理事会理事。</p>
 														</article>
 								
 
