--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 											therapeutic development (Li et al. <i>Nat. Commun.</i> 2019, 10, 5038) and a <strong>nanosecond photochemical 
 											click chemistry</strong> method for rapid neuropeptide and protein structural analysis (Li et al. 
 											<i>Nat. Commun.</i> 2019, 10, 4697, Featured by Nature Communications Editors HIGHLIGHTS). 
-											Dr. Li’s research efforts, overall, have generated 4 grants, 7 fellowships/awards, 
-											6 oral presentations and 29 scientific publications to date, including 2 Nat. Commun., 
-											4 Anal. Chem., 1 Chem. Sci. and 1 Trends Anal. Chem. papers, along with 380+ citations.</p>											
+											By Feburary 2022, Dr. Li’s research efforts, overall, have generated 4 grants, 7 fellowships/awards, 
+											> 10 oral presentations and 29 scientific publications, including 2 Nat. Commun., 
+											6 Anal. Chem., 1 Chem. Sci. and 1 Trends Anal. Chem. papers, featuring with 550+ citations.</p>											
 										</article>
 									
 														<article class="box excerpt">
