--- a/index.html
+++ b/index.html
@@ -188,10 +188,9 @@
 															<header>
 																<span class="date">导师简介</span>
 															</header>
-															<p><strong>李功玉</strong>，男，南开大学化学学院，特聘研究员，博士生导师。入选南开大学“百青人才”计划和国家高层次青年人才计划。2017年毕业于中国科学技术大学，获理学博士学位。
-															2017年至2021年在美国威斯康星大学麦迪逊分校开展博士后研究。2016年和2019年两次前往美国密西根大学安娜堡分校交流访问。2021年2月加入南开大学化学学院，成立LimsLab课题组，研究方向为蛋白结构质谱分析。
-															相关成果逐渐产生国际影响力：以第一作者（含共一）或通讯作者发表SCI论文17篇（含2篇Nat. Commun.和 6篇Anal. Chem.）；主持中美四项基金；获2019美国质谱协会博士后职业发展奖；
-															多次在国际会议上做邀请口头报告；担任有国际影响力期刊仲裁审稿人；担任天津市色谱研究会第九届理事会理事。</p>
+															<p><strong>李功玉</strong>，李功玉，南开大学化学学院，研究员、博士生导师。入选国家高层次青年人才计划、主持科技部重点研发青年项目。2021年2月加入南开大学化学学院，成立LimsLab课题组，研究方向为大分子结构质谱分析。 
+															以通讯或第一作者发表SCI论文20篇（含2篇Nat. Commun.和 6篇Anal. Chem.）。课题组成立以来，获取可支配经费近千万元，指导3名本科生获批大创项目，3名本科生完成毕业设计，以南开大学为通讯单位发表2篇Anal Chem。
+															成功组建一支15人的年轻科研队伍，课题组现有研究生8人，本科生3人，科研助理4人，团队组成合理，继续虚位以待，期待您的加入与合作！</p>
 														</article>
 								
 
