--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 															<header>
 																<span class="date">导师简介</span>
 															</header>
-															<p><strong>李功玉</strong>，李功玉，南开大学化学学院，研究员、博士生导师。入选国家高层次青年人才计划、主持科技部重点研发青年项目。2021年2月加入南开大学化学学院，成立LimsLab课题组，研究方向为大分子结构质谱分析。 
+															<p><strong>李功玉</strong>，南开大学化学学院，研究员、博士生导师。入选国家高层次青年人才计划、主持科技部重点研发青年项目。2021年2月加入南开大学化学学院，成立LimsLab课题组，研究方向为大分子结构质谱分析。 
 															以通讯或第一作者发表SCI论文20篇（含2篇Nat. Commun.和 6篇Anal. Chem.）。课题组成立以来，获取可支配经费近千万元，指导3名本科生获批大创项目，3名本科生完成毕业设计，以南开大学为通讯单位发表2篇Anal Chem。
 															成功组建一支15人的年轻科研队伍，课题组现有研究生8人，本科生3人，科研助理4人，团队组成合理，继续虚位以待，期待您的加入与合作！</p>
 														</article>
