--- a/publication.html
+++ b/publication.html
@@ -68,7 +68,7 @@
 									<h3><strong><U><font color='blue'>At Nankai University</font></U>:</strong></h3>
 									<h3><strong>2022</strong></h3>
 									
-									<p><strong>32</strong>. Xia Xu, Zhijun Zhu, Lingjun Li*, and <strong>Gongyu Li*</strong>.	<a href="http://www.jcmss.com.cn/EN/10.7538/zpxb.2022.0081"> Recent Progress on Native Mass Spectrometry: 
+									<p><strong>32</strong>. Xia Xu, Chenao Zhang, Ziyi Sun, Zhen Zheng and <strong>Gongyu Li*</strong>.	<a href="http://www.jcmss.com.cn/EN/10.7538/zpxb.2022.0081"> Recent Progress on Native Mass Spectrometry: 
 									Protein Extraction, Ion Source, and Conformational Interpretation.
 									</a> <strong><i>Journal of Chinese Mass Spectrometry Society</i></strong> 2022, 43, 6, 740-753. (doi:)</br> 
 									
