--- a/people.html
+++ b/people.html
@@ -133,7 +133,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/jun2022.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Jun2022.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS005: Jun Liu</h3>
 										</header>
