--- a/people.html
+++ b/people.html
@@ -85,8 +85,7 @@
 											<h3>LIMS001: Xia Xu</h3>
 										</header>
 										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br> 
-										<strong>MS</strong>: 2018.09 - 2021.07, Beijing Univ. C. Med.<br>
-										<strong>BS</strong>: 201409 - 201806, Shandong Univ. Tra. C. Med. </p>
+										<strong>MS</strong>: 2018.09 - 2021.07, Beijing Univ. C. Med.</p>
 									</section>
 
 							</div>
