--- a/people.html
+++ b/people.html
@@ -158,13 +158,12 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/ruomeng2022.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS005: xxx</h3>
+											<h3>LIMS007: Ruomeng Li</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br> 
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison<br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<p><strong>MS Student</strong>: 2022.09 - now, Nankai University<br> 
+										<strong>BS</strong>: 2018.09 - 2022.06, Jilin University </p>
 									</section>
 														
 							</div>
@@ -172,13 +171,12 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/yawen2022.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS004: xxx</h3>
+											<h3>LIMS008: Yawen Wang</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University <br> 
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison <br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<p><strong>MS Student</strong>: 2022.09 - now, Nankai University <br> 
+										<strong>BS</strong>: 2018.09 - 2022.06, Sichuan University </p>
 									</section>
 							
 							</div>
