--- a/people.html
+++ b/people.html
@@ -184,13 +184,12 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Xiaoli2022.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS005: xxx</h3>
+											<h3>RA01: Xiaoli Wang</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br> 
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison<br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<p><strong>RA</strong>: 2022.07 - now, Nankai University<br> 
+										<strong>MS</strong>: 2019.09 - 2022.06, Tianjin University </p>
 									</section>
 														
 							</div>
@@ -198,13 +197,12 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Weida2022.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS004: xxx</h3>
+											<h3>RA02: Weida Qin</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University <br> 
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison <br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<p><strong>RA</strong>: 2022.07 - now, Nankai University <br> 
+										<strong>MS</strong>: 2019.09 - 2022.06, Tianjin Univ. C. Med. </p>
 									</section>
 							
 							</div>
