--- a/people.html
+++ b/people.html
@@ -210,13 +210,12 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/yifei2022.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS005: xxx</h3>
+											<h3>RA03: Yifei Jia</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br> 
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison<br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<p><strong>RA</strong>: 2022.09 - now, Nankai University<br> 
+										<strong>MS</strong>: 2019.09 - 2022.08, University of Macau </p>
 									</section>
 														
 							</div>
