--- a/news.html
+++ b/news.html
@@ -67,6 +67,22 @@
 										<section>
 											<ul class="divided">
 												
+												<li>
+
+													<!-- Excerpt -->
+														<article class="box excerpt">
+															<header>
+																<span class="date">December 14, 2022</span>
+																<h3><a href="news.html">LimsLab will be funded with ￥5M in 5 Years! </a></h3>
+															</header>
+															<p>I am so excited to share the most recent funding resource information from the LimsLab@NKU: the proposal on ###“Development and Application of Conformation-resolved, 
+															High-throughput Mass Spectrometry Strategy for Profiling and Quantifing Protein Stereochemical Modifications at the Proteome Level”### has been granted as a part of 
+															the <strong>National Key R&D Program of China</strong>. It is a big deal for the LimsLab as of <strong>¥5M (~$0.7M)</strong>. The funding program is also considered as <strong>Highly competitive</strong> in China. 
+															We are looking forward to producing more exciting results in the next 5 years in the discovery of novel D-amino acid containing proteins associated with human degenerative disease, like AD and PD.</p>
+															<span class="image featured"><img src="images/kejibu.jpg" alt="" /></span>
+														</article>
+
+												</li>
 												
 												<li>
 
